Downgrading to java 11